--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "^6.1.6",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "react-spinners": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
